# sir-lance-convexlot

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/convexlance/: __init__.py  cli.py
tests/: test_cli.py
