[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "convexlance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "duckdb==1.5.2",
  "boto3==1.43.0",
  "botocore[crt]==1.43.0",
  "pyarrow==24.0.0",
  "pylance==4.0.1",
]

[project.scripts]
convexlance = "convexlance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
